# api-processor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: problem.md  problem.ru.md
src/: main.rs
src/api/: calcController.rs
src/models/: calcRequest.rs  calcResponse.rs
src/services/: cloudCalc.rs  compareService.rs  localCalc.rs  sensitivityService.rs
