[package]
name = "api-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = { version = "4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }